[package]
name = "kub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
rdkafka = { version = "0.36.0", features = ["ssl-vendored"] }
config = "0.13.4"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde_json = "1.0.99"
regex = { version = "1.10.2", features = [] }
tokio = { version = "1.32.0", features = [] }

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
